Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignTextObjTextObjField.quorum
class Main
    Text v
    v:SetValue(text)
    action Main
        Test(v)
    end

    action Test(Text var)
        if var:GetValue() = text
            output "passed"
        end
    end
end
