Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumberTextObjField.quorum
class Main
    number v = Test()
    action Main
    end

    action Test() returns number
        Text var
        var:SetValue("text")
        return var
    end
end